--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
-      name: '',
-      logo:'favicon.svg',
-      repo: '',
+      name: 'SEND开发笔记',
+      repo: 'https://github.com/dehuadong/ddhdoc',
+      topMargin: 90, // default: 0
       loadSidebar: true,
+      autoHeader: true,
+      mergeNavbar: true,
       subMaxLevel: 3,
       loadNavbar: true,
       coverpage: false 
@@ -23,5 +25,8 @@
   </script>
   <!-- Docsify v4 -->
   <script src="//cdn.jsdelivr.net/npm/docsify@4.10.2/lib/docsify.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify-copy-code/dist/docsify-copy-code.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/zoom-image.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/docsify/lib/plugins/emoji.min.js"></script>
 </body>
 </html>
